tests/baselines/reference/classAbstractMultiLineDecl.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMultiLineDecl.ts(10,1): error TS2511: Cannot create an instance of the abstract class 'A'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMultiLineDecl.ts(11,1): error TS2511: Cannot create an instance of the abstract class 'B'.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMultiLineDecl.ts(12,1): error TS2511: Cannot create an instance of the abstract class 'C'.


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractMultiLineDecl.ts (3 errors) ====
    abstract class A {}
    
    abstract
    class B {}
    
    abstract
    
    class C {}
    
    new A;
    ~~~~~
!!! error TS2511: Cannot create an instance of the abstract class 'A'.
    new B;
    ~~~~~
!!! error TS2511: Cannot create an instance of the abstract class 'B'.
    new C;
    ~~~~~
!!! error TS2511: Cannot create an instance of the abstract class 'C'.